ui: fix ranklist highlight in dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -408,3 +408,6 @@ $hover-background-color = #424242
 
   &.page--record_detail .subtask
     background-color: #000 !important
+
+  &.page--contest_scoreboard .star-highlight 
+    background: #6f757b
